--- a/week2.html
+++ b/week2.html
@@ -55,9 +55,9 @@
     <br>
     <br>
     <p>
-      <a href="https://kiannelim.github.io/id2116/index.html">HOME</a> <br>
-      <a href="https://kiannelim.github.io/id2116/week2.html" target="_blank">WEEK 2</a>   |   
-      <a href="https://kiannelim.github.io/id2116/week3.html" target="_blank">WEEK 3</a>   |   
+      <a class="footerclicked" href="https://kiannelim.github.io/id2116/index.html">HOME</a> <br>
+      <a class="footerclicked" href="https://kiannelim.github.io/id2116/week2.html" target="_blank">WEEK 2</a>   |   
+      <a class="footerclicked" href="https://kiannelim.github.io/id2116/week3.html" target="_blank">WEEK 3</a>   |   
     </p>
     <br>
     <br>
