--- a/week2.html
+++ b/week2.html
@@ -50,7 +50,7 @@
     </div>
   </div>
 
-  <footer style="background-color: rgb(8, 8, 70); color: white;">
+  <footer>
     <br>
     <br>
     <br>
