--- a/week3.html
+++ b/week3.html
@@ -28,7 +28,7 @@
         Possible applications
     </p>
 
-    <footer style="background-color: rgb(8, 8, 70); color: white;">
+    <footer>
         <br>
         <br>
         <br>
