--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <a href="https://kiannelim.github.io/id2116/week4.html" target="_blank">WEEK 4</a>
   </div>
 
-<footer>
+<footer style="margin-left: -10px; margin-right: -10px; margin-bottom: -10px;">
   <br>
   <br>
   <br>
