--- a/week3.html
+++ b/week3.html
@@ -28,7 +28,7 @@
         Possible applications
     </p>
 
-    <footer>
+    <footer style="margin-left: -10px; margin-right: -10px;">
         <br>
         <br>
         <br>
