--- a/week2.html
+++ b/week2.html
@@ -7,18 +7,20 @@
 
   <div class="hero-image">
    <div class="hero-text">
-     <font size="+4"><h1> <b></b>Weekly Documentation</h1></font>
+     <font size="+4"><h1> <b>Weekly Documentation</b> </h1></font>
      <h3>Week 2   |   16.01.2020</h3>
+     <p><i>Written and edited by Charlotte Ho and Kianne Lim.</i></p>
    </div>
- </div>
+  </div>
 </head>
 
 <body>
+  <!-- ------------------------------------------ EDIT WEEKLY CONTENT HERE ------------------------------------------------- -->
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px;">
-    <h2>Class Exercises</h2>
+    <h2>Class Exercise</h2>
     <p>
       Microbit <br>
-      Introduction to HTML and CSS. Our Website is born today.
+      Introduction to HTML and CSS. Our Website was born today.
 
       <br>
 
@@ -49,6 +51,7 @@
         </div>
     </div>
   </div>
+<!-- ------------------------------------------ END OF WEEKLY CONTENT HERE ------------------------------------------------- -->
 
   <footer style="margin-left: -10px; margin-right: -10px;">
     <br>
