--- a/week3.html
+++ b/week3.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap" rel="stylesheet">
-  
-    <div class="hero-image">
-     <div class="hero-text">
-       <font size="+4"><h1> <b></b>Weekly Documentation</h1></font>
-       <h3>Week 3   |   31.01.2020</h3>
-     </div>
+  <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap" rel="stylesheet">
+
+  <div class="hero-image">
+   <div class="hero-text">
+     <font size="+4"><h1> <b>Weekly Documentation</b> </h1></font>
+     <h3>Week 3   |   31.01.2020</h3>
+     <p><i>Written and edited by Charlotte Ho and Kianne Lim.</i></p>
    </div>
+  </div>
 </head>
 
 <body>
-    <br>
-    <br>
-    <h2>Week 3 Class Exercise</h2>
+  <!-- ------------------------------------------ EDIT WEEKLY CONTENT HERE ------------------------------------------------- -->
+  <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px;">
+    <h2>Class Exercises</h2>
     <p>
         Today we were introduced to p5.js - we learned how to create interactive images and a sideway-scroll photo album.
         Here is what we did in class:
@@ -26,7 +27,39 @@
         Lessons learnt
 
         Possible applications
+
+      <br>
+
+      Problems faced <br>
+
+      Lessons learnt <br>
+
+      Possible applications <br>
     </p>
+  </div>
+
+  <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px; background-color: snow">
+    
+    <h2>Microbit Project Progress</h2>
+    <p>
+        Lorem ipsum dolor sit amet.
+    </p>
+    <!--
+    <div class="row2">
+        <div class="column2" style="text-align: center;">
+          <img src="IMAGE/shakecube.png" alt="shakecube" style="width:20%">
+        </div>
+        <div class="column2">
+          <img src="IMAGE/spincube.png" alt="spincube" style="width:20%">
+        </div>
+        <div class="column2">
+          <img src="IMAGE/tiltcubemusic.png" alt="tiltcubemusic" style="width:20%">
+        </div>
+    </div>
+    -->
+  </div>
+<!-- ------------------------------------------ END OF WEEKLY CONTENT HERE ------------------------------------------------- -->
+
 
     <footer style="margin-left: -10px; margin-right: -10px;">
         <br>
