--- a/week3.html
+++ b/week3.html
@@ -44,7 +44,9 @@
         <br>
         <br>
         <p>
-            Lorem ipsom dolor sit amet.
+          <a class="footerclicked" href="https://kiannelim.github.io/id2116/index.html">HOME</a> <br>
+          <a class="footerclicked" href="https://kiannelim.github.io/id2116/week2.html" target="_blank">WEEK 2</a>   |   
+          <a class="footerclicked" href="https://kiannelim.github.io/id2116/week3.html" target="_blank">WEEK 3</a>   |   
         </p>
         <br>
         <br>
