--- a/week2.html
+++ b/week2.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  
+
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="style.css">
@@ -34,9 +34,7 @@
   </div>
 
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px; background-color: snow">
-    
     <h2>Microbit Project Progress</h2>
-
     <img style="text-align: center;" src="IMAGE/dice.JPG"; width="40%"; height="70%">
     <br>
     <br>
@@ -62,6 +60,7 @@
       <a class="footerclicked" href="https://kiannelim.github.io/id2116/index.html">HOME</a> <br>
       <a class="footerclicked" href="https://kiannelim.github.io/id2116/week2.html" target="_blank">WEEK 2</a>   |   
       <a class="footerclicked" href="https://kiannelim.github.io/id2116/week3.html" target="_blank">WEEK 3</a>   |   
+      <a class="footerclicked" href="https://kiannelim.github.io/id2116/week4.html" target="_blank">WEEK 4</a>   |   
     </p>
     <br>
     <br>
