--- a/week3.html
+++ b/week3.html
@@ -47,6 +47,7 @@
           <a class="footerclicked" href="https://kiannelim.github.io/id2116/index.html">HOME</a> <br>
           <a class="footerclicked" href="https://kiannelim.github.io/id2116/week2.html" target="_blank">WEEK 2</a>   |   
           <a class="footerclicked" href="https://kiannelim.github.io/id2116/week3.html" target="_blank">WEEK 3</a>   |   
+          <a class="footerclicked" href="https://kiannelim.github.io/id2116/week4.html" target="_blank">WEEK 4</a>   |   
         </p>
         <br>
         <br>
