--- a/week4.html
+++ b/week4.html
@@ -9,8 +9,8 @@
   <div class="hero-image">
    <div class="hero-text">
      <font size="+4"><h1> <b>Weekly Documentation</b> </h1></font>
-     <h3>Week 2   |   16.01.2020</h3>
-     <p><i>Written and edited by Charlotte Ho and Kianne Lim.</i></p>
+     <h3>Week 4   |   07.02.2020</h3>
+     <p><i>Written and edited by Charlotte Ho.</i></p>
    </div>
   </div>
 </head>
@@ -20,8 +20,7 @@
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px;">
     <h2>Class Exercise</h2>
     <p>
-      Microbit <br>
-      Introduction to HTML and CSS. Our Website was born today.
+      Lorem ipsum dolor amet.
 
       <br>
 
@@ -34,23 +33,10 @@
   </div>
 
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px; background-color: snow">
-    
     <h2>Microbit Project Progress</h2>
-
-    <img style="text-align: center;" src="IMAGE/dice.JPG"; width="40%"; height="70%">
-    <br>
-    <br>
-    <div class="row2">
-        <div class="column2" style="text-align: center;">
-          <img src="IMAGE/shakecube.png" alt="shakecube" style="width:20%">
-        </div>
-        <div class="column2">
-          <img src="IMAGE/spincube.png" alt="spincube" style="width:20%">
-        </div>
-        <div class="column2">
-          <img src="IMAGE/tiltcubemusic.png" alt="tiltcubemusic" style="width:20%">
-        </div>
-    </div>
+    <p>
+      Lorem ipsum dolor sit amet.
+    </p>
   </div>
 <!-- ------------------------------------------ END OF WEEKLY CONTENT HERE ------------------------------------------------- -->
 
@@ -62,6 +48,7 @@
       <a class="footerclicked" href="https://kiannelim.github.io/id2116/index.html">HOME</a> <br>
       <a class="footerclicked" href="https://kiannelim.github.io/id2116/week2.html" target="_blank">WEEK 2</a>   |   
       <a class="footerclicked" href="https://kiannelim.github.io/id2116/week3.html" target="_blank">WEEK 3</a>   |   
+      <a class="footerclicked" href="https://kiannelim.github.io/id2116/week4.html" target="_blank">WEEK 4</a>   |   
     </p>
     <br>
     <br>
