--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
     <!-- Add side by side thumbnails here NEXT TIME-->
     <a href="https://kiannelim.github.io/id2116/week2.html" target="_blank">WEEK 2</a> <br>
     <a href="https://kiannelim.github.io/id2116/week3.html" target="_blank">WEEK 3</a> <br>
-    <a href="https://kiannelim.github.io/id2116/week4.html" target="_blank">WEEK 4</a>
+    <a href="https://kiannelim.github.io/id2116/week4.html" target="_blank">WEEK 4</a> <br>
+    <!-- <a href="https://kiannelim.github.io/id2116/week5.html" target="_blank">WEEK 5</a> -->
   </div>
 
 <footer style="margin-left: -10px; margin-right: -10px;">
