--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </div>
 
 <body>
-<div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px; background-color: bisque;">
+<div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px; background-color:snow;">
   <h2> About Us </h2>
     <p>
       Hello! We are Charlotte and Kianne, two budding Industrial Designers striving to make a difference in the world of design.
