--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
     <a href="https://kiannelim.github.io/id2116/week3.html" target="_blank">WEEK 3</a> <br>
     <a href="https://kiannelim.github.io/id2116/week4.html" target="_blank">WEEK 4</a> <br>
     <!-- <a href="https://kiannelim.github.io/id2116/week5.html" target="_blank">WEEK 5</a> -->
+
+    <button class="weeklybutton" style="text-align: center;">WEEK 2</button>
+    <button class="weeklybutton" style="text-align: center;" onclick= <a href="https://kiannelim.github.io/id2116/week2.html" target="_blank"> WEEK 2</a> </button>
+
   </div>
 
 <footer style="margin-left: -10px; margin-right: -10px;">
