--- a/index.html
+++ b/index.html
@@ -63,8 +63,11 @@
     <a href="https://kiannelim.github.io/id2116/week4.html" target="_blank">WEEK 4</a> <br>
     <!-- <a href="https://kiannelim.github.io/id2116/week5.html" target="_blank">WEEK 5</a> -->
 
-    <button class="weeklybutton" style="text-align: center;">WEEK 2</button>
-    <button class="weeklybutton" style="text-align: center;" onclick= <a href="https://kiannelim.github.io/id2116/week2.html" target="_blank"> WEEK 2</a> </button>
+    <form>
+      <input type="button" onclick="window.location.href = 'https://kiannelim.github.io/id2116/week2.html';" value="WEEK 2"/>
+   </form>
+    <button class="weeklybutton" style="text-align: center;"
+    onclick= <a href="https://kiannelim.github.io/id2116/week2.html" target="_blank"> WEEK 2</a> </button>
 
   </div>
 
