--- a/index.html
+++ b/index.html
@@ -63,11 +63,9 @@
     <a href="https://kiannelim.github.io/id2116/week4.html" target="_blank">WEEK 4</a> <br>
     <!-- <a href="https://kiannelim.github.io/id2116/week5.html" target="_blank">WEEK 5</a> -->
 
-    <form>
+    <form class="button" style="text-align: center;" target="_blank">
       <input type="button" onclick="window.location.href = 'https://kiannelim.github.io/id2116/week2.html';" value="WEEK 2"/>
    </form>
-    <button class="weeklybutton" style="text-align: center;"
-    onclick= <a href="https://kiannelim.github.io/id2116/week2.html" target="_blank"> WEEK 2</a> </button>
 
   </div>
 
