--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     <a href="https://kiannelim.github.io/id2116/week4.html" target="_blank">WEEK 4</a> <br>
     <!-- <a href="https://kiannelim.github.io/id2116/week5.html" target="_blank">WEEK 5</a> -->
 
-    <form class="button" style="text-align: center;" target="_blank">
-      <input type="button" onclick="window.location.href = 'https://kiannelim.github.io/id2116/week2.html';" value="WEEK 2"/>
+    <form class="button" style="text-align: center;">
+      <input type="button" onclick="window.location.href = 'https://kiannelim.github.io/id2116/week2.html';" target="_blank" value="WEEK 2"/>
    </form>
 
   </div>
