--- a/index.html
+++ b/index.html
@@ -64,8 +64,10 @@
     <!-- <a href="https://kiannelim.github.io/id2116/week5.html" target="_blank">WEEK 5</a> -->
 
     <form class="button" style="text-align: center;">
-      <input type="button" onclick="window.location.href = 'https://kiannelim.github.io/id2116/week2.html';" target="_blank" value="WEEK 2"/>
+      <input type="button" onclick="window.location.href = 'https://kiannelim.github.io/id2116/week2.html';" value="WEEK 2"/>
    </form>
+
+   <!-- target="_blank" -->
 
   </div>
 
