--- a/week4.html
+++ b/week4.html
@@ -10,7 +10,7 @@
    <div class="hero-text">
      <font size="+4"><h1> <b>Weekly Documentation</b> </h1></font>
      <h3>Week 4   |   07.02.2020</h3>
-     <p><i>Written and edited by Charlotte Ho.</i></p>
+     <p><i>Written and edited by ....</i></p>
    </div>
   </div>
 </head>
