--- a/index.html
+++ b/index.html
@@ -57,14 +57,18 @@
       Here, we document our findings week by week. Join us in our learning journey by clicking on the images below!
     </p>
 
-    <!-- Add side by side thumbnails here NEXT TIME-->
+    <!-- Add side by side thumbnails here NEXT TIME
     <a href="https://kiannelim.github.io/id2116/week2.html" target="_blank">WEEK 2</a> <br>
     <a href="https://kiannelim.github.io/id2116/week3.html" target="_blank">WEEK 3</a> <br>
-    <a href="https://kiannelim.github.io/id2116/week4.html" target="_blank">WEEK 4</a> <br>
+    <a href="https://kiannelim.github.io/id2116/week4.html" target="_blank">WEEK 4</a> <br> -->
+
     <!-- <a href="https://kiannelim.github.io/id2116/week5.html" target="_blank">WEEK 5</a> -->
 
     <form style="text-align: center;">
-      <input type="button" onclick="window.location.href = 'https://kiannelim.github.io/id2116/week2.html';" value="WEEK 2"/>
+      <input type="button" target="_blank" onclick="window.location.href = 'https://kiannelim.github.io/id2116/week2.html';" value="WEEK 2"/>
+      <input type="button" onclick="window.location.href = 'https://kiannelim.github.io/id2116/week3.html';" value="WEEK 3"/>
+      <input type="button" onclick="window.location.href = 'https://kiannelim.github.io/id2116/week4.html';" value="WEEK 4"/>
+      <!-- <input type="button" onclick="window.location.href = 'https://kiannelim.github.io/id2116/week5.html';" value="WEEK 5"/> -->
    </form>
 
    <!-- target="_blank" -->
