--- a/w3/week3.html
+++ b/w3/week3.html
@@ -1,46 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap" rel="stylesheet">
-  
-    <div class="hero-image">
-     <div class="hero-text">
-       <font size="+4"><h1> <b></b>Weekly Documentation</h1></font>
-       <h3>Week 3   |   31.01.2020</h3>
-     </div>
+  <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap" rel="stylesheet">
+
+  <div class="hero-image">
+   <div class="hero-text">
+     <font size="+4"><h1> <b></b>Weekly Documentation</h1></font>
+     <h3>Week 3   |   31.01.2020</h3>
    </div>
+ </div>
 </head>
 
 <body>
-    <br>
-    <br>
-    <h2>Week 3 Class Exercise</h2>
+  <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px;">
+    <h2>Class Exercises</h2>
     <p>
-        Today we were introduced to p5.js - we learned how to create interactive images and a sideway-scroll photo album.
-        Here is what we did in class:
+      Microbit <br>
+      Introduction to p5js.
 
-        Problems faced
+      <br>
 
-        Lessons learnt
+      Problems faced <br>
 
-        Possible applications
+      Lessons learnt <br>
+
+      Possible applications <br>
+    </p>
+  </div>
+
+  <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px; background-color: snow">
+    
+    <h2>Microbit Project Progress</h2>
+
+    <h3>Ideation</h3>
+    <p>1. “Mapping” [Audio, Visual, Physical] feedback with Object interaction
+    </br>
+    BOX
+    <ul>
+      <li>(Closed Box playing mewing sounds): [action] Open Lid > [feedback] mewing sounds stop</li>
+      <li>(Closed Box): [action] Topple box over > [audio feedback] Mewing sounds stop</li>
+      <li>(Closed Box with static colours): [action] Spin > [visual feedback] Box surface lights up with video moving colours</li>
+      <li>(Empty Box): [action] Takes something out > [audio feedback] plays  music 'MC Hammer - U Can't Touch This'</li>
+    </ul>
+  </p>
+    <p>Rough prototype
+    </br>
+    
     </p>
 
-    <footer style="margin-left: -10px; margin-right: -10px;">
-        <br>
-        <br>
-        <br>
-        <p>
-            Lorem ipsom dolor sit amet.
-        </p>
-        <br>
-        <br>
-        <br>
-        <br>
-      </footer>
+    <img style="text-align: center;" src="IMAGE/dice.JPG"; width="40%"; height="70%">
+    <br>
+    <br>
+    <div class="row2">
+        <div class="column2" style="text-align: center;">
+          <img src="IMAGE/shakecube.png" alt="shakecube" style="width:20%">
+        </div>
+        <div class="column2">
+          <img src="IMAGE/spincube.png" alt="spincube" style="width:20%">
+        </div>
+        <div class="column2">
+          <img src="IMAGE/tiltcubemusic.png" alt="tiltcubemusic" style="width:20%">
+        </div>
+    </div>
+  </div>
 
-</body> 
+  <footer style="margin-left: -10px; margin-right: -10px;">
+    <br>
+    <br>
+    <br>
+    <p>
+      <a class="footerclicked" href="https://kiannelim.github.io/id2116/index.html">HOME</a> <br>
+      <a class="footerclicked" href="https://kiannelim.github.io/id2116/week2.html" target="_blank">WEEK 2</a>   |   
+      <a class="footerclicked" href="https://kiannelim.github.io/id2116/w3/week3.html" target="_blank">WEEK 3</a>   |   
+    </p>
+    <br>
+    <br>
+    <br>
+    <br>
+  </footer>
+
+  </body>
 
 </html>
