--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <input type="button" onclick="window.location.href = 'https://kiannelim.github.io/id2116/week2.html';" value="WEEK 2"/>
       <input type="button" onclick="window.location.href = 'https://kiannelim.github.io/id2116/week3.html';" value="WEEK 3"/>
       <input type="button" onclick="window.location.href = 'https://kiannelim.github.io/id2116/week4.html';" value="WEEK 4"/>
-      <input type="button" target="_blank" onclick="window.location.href = 'https://kiannelim.github.io/id2116/week5.html';" value="WEEK 5"/>
+      <!-- <input type="button" onclick="window.location.href = 'https://kiannelim.github.io/id2116/week5.html';" value="WEEK 5"/> -->
    </form>
 
    <!-- target="_blank" -->
