--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
     <!-- <a href="https://kiannelim.github.io/id2116/week5.html" target="_blank">WEEK 5</a> -->
 
     <form style="text-align: center;" >
-      <input type="button" onclick="window.location.href = 'https://kiannelim.github.io/id2116/week2.html';" value="WEEK 2"/>
-      <input type="button" onclick="window.location.href = 'https://kiannelim.github.io/id2116/week3.html';" value="WEEK 3"/>
-      <input type="button" onclick="window.location.href = 'https://kiannelim.github.io/id2116/week4.html';" value="WEEK 4"/>
+      <input class="button" style="text-align: center;" type="button" onclick="window.location.href = 'https://kiannelim.github.io/id2116/week2.html';" value="WEEK 2"/>
+      <input class="button" style="text-align: center;" type="button" onclick="window.location.href = 'https://kiannelim.github.io/id2116/week3.html';" value="WEEK 3"/>
+      <input class="button" style="text-align: center;" type="button" onclick="window.location.href = 'https://kiannelim.github.io/id2116/week4.html';" value="WEEK 4"/>
       <!-- <input type="button" onclick="window.location.href = 'https://kiannelim.github.io/id2116/week5.html';" value="WEEK 5"/> -->
    </form>
 
