--- a/KIANNE/kianne.html
+++ b/KIANNE/kianne.html
@@ -25,7 +25,8 @@
 <body>
     <div class="columntext, bodytext">
 
-      <img src="KIANNE/images/kiannedp.png">
+      <img src="IMAGE/kiannedp.png" alt="kiannedp" style="width:40%"> <br> <br>
+          <a href="https://kiannelim.github.io/id2116/kianne.html" target="_blank">KIANNE LIM</a>
       <p>Kianne is a Singaporean industrial designer. Her story started with a delicious cup of fine arabica at a local coffee roastery where she worked alongside state-of-the-art coffee equipment. Captivated by how design and technology can come together to craft a lovely beverage and bring smiles to the table, she endeavours to design meaningful experiences. Her design strives for a balance between elegance and practicality.
   
       
