--- a/week2.html
+++ b/week2.html
@@ -11,6 +11,13 @@
      <font size="+4"><h1> <b>Weekly Documentation</b> </h1></font>
      <h3>Week 2   |   16.01.2020</h3>
      <p><i>Written and edited by Charlotte Ho and Kianne Lim.</i></p>
+     <style>
+      div{
+      margin-top: -10px;
+      margin-left: -10px;
+      margin-right: -10px;
+      } 
+     </style>
    </div>
   </div>
 </head>
