--- a/week4.html
+++ b/week4.html
@@ -56,6 +56,8 @@
       <a class="footerclicked" href="https://kiannelim.github.io/id2116/week2.html" target="_blank">WEEK 2</a>   |   
       <a class="footerclicked" href="https://kiannelim.github.io/id2116/week3.html" target="_blank">WEEK 3</a>   |   
       <a class="footerclicked" href="https://kiannelim.github.io/id2116/week4.html" target="_blank">WEEK 4</a>   |   
+      <a class="footerclicked" href="https://kiannelim.github.io/id2116/week5.html" target="_blank">WEEK 5</a>   |   
+      <a class="footerclicked" href="https://kiannelim.github.io/id2116/week5.html" target="_blank">WEEK 6</a>   |   
     </p>
     <br>
     <br>
