--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
   <br>
   <br>
   <br>
-  <p>
-    Back to <a href="#C H A R K I">top</a>.
-  </p>
+  <p>Back to <a href="#C H A R K I">top © 2020 by Charki.</a></p>
+  <br>
+  <p>Proudly created by Charlotte Ho and Kianne Lim under the guidance of Yuta. All rights reserved. JK.</p>
   <br>
   <br>
   <br>
