--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
   <br>
   <p>Back to <a href="#C H A R K I">top.</a></p>
   <br>
-  <p> <i>© 2020 by Charki. Proudly created by Charlotte Ho and Kianne Lim under the guidance of Yuta. All rights reserved. Just kidding.</i> </p>
+  <br>
+  <p> <i>© 2020 by Charki. Proudly created by Charlotte Ho and Kianne Lim under the guidance of Yuta. All rights reserved... Just kidding.</i> </p>
   <br>
   <br>
   <br>
