--- a/week2.html
+++ b/week2.html
@@ -73,6 +73,9 @@
     </p>
     <br>
     <br>
+    <p> <i>© 2020 by Charki. Proudly created by Charlotte Ho and Kianne Lim under the guidance of Yuta. All rights reserved... Just kidding.</i> </p>
+    <br>
+    <br>
     <br>
     <br>
   </footer>
