--- a/week3.html
+++ b/week3.html
@@ -63,7 +63,7 @@
           <a class="footerclicked" href="https://kiannelim.github.io/id2116/week3.html" target="_blank">WEEK 3</a>   |   
           <a class="footerclicked" href="https://kiannelim.github.io/id2116/week4.html" target="_blank">WEEK 4</a>   |   
           <a class="footerclicked" href="https://kiannelim.github.io/id2116/week5.html" target="_blank">WEEK 5</a>   |   
-          <a class="footerclicked" href="https://kiannelim.github.io/id2116/week6.html" target="_blank">WEEK 6</a>   |   
+          <a class="footerclicked" href="https://kiannelim.github.io/id2116/week6.html" target="_blank">WEEK 6</a>
         </p>
         <br>
         <p> <i>© 2020 by Charki. Proudly created by Charlotte Ho and Kianne Lim under the guidance of Yuta. All rights reserved... Just kidding.</i> </p>
