--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
       <div class="row1" style="text-align: center;">
         <div class="column1">
           <img src="IMAGE/charlottedp.png" alt="charlottedp" style="width:40%"> <br> <br>
-          <a href="https://charlotteho.weebly.com/" target="_blank">CHARLOTTE HO</a>
+          <a href="https://char-hy.github.io/id2116/" target="_blank">CHARLOTTE HO</a>
+          <!-- <a href="https://charlotteho.weebly.com/" target="_blank">CHARLOTTE HO</a> -->
         </div>
         <div class="column1">
           <img src="IMAGE/kiannedp.png" alt="kiannedp" style="width:40%"> <br> <br>
