--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
 
     <form style="text-align: center;" >
       <input class="button" style="text-align: center; background-color: white;" type="button" onclick="window.location.href = 'https://kiannelim.github.io/id2116/week2.html';" value="WEEK 2"/>
-      <input class="button" style="text-align: center;" type="button" onclick="window.location.href = 'https://kiannelim.github.io/id2116/week3.html';" value="WEEK 3"/>
-      <input class="button" style="text-align: center;" type="button" onclick="window.location.href = 'https://kiannelim.github.io/id2116/week4.html';" value="WEEK 4"/>
-      <input class="button" style="text-align: center;" type="button" onclick="window.location.href = 'https://kiannelim.github.io/id2116/week4.html';" value="WEEK 5"/>
-      <input class="button" style="text-align: center;" type="button" onclick="window.location.href = 'https://kiannelim.github.io/id2116/week4.html';" value="WEEK 6"/>
+      <input class="button" style="text-align: center; background-color: white;" type="button" onclick="window.location.href = 'https://kiannelim.github.io/id2116/week3.html';" value="WEEK 3"/>
+      <input class="button" style="text-align: center; background-color: white;" type="button" onclick="window.location.href = 'https://kiannelim.github.io/id2116/week4.html';" value="WEEK 4"/>
+      <input class="button" style="text-align: center; background-color: white;" type="button" onclick="window.location.href = 'https://kiannelim.github.io/id2116/week4.html';" value="WEEK 5"/>
+      <input class="button" style="text-align: center; background-color: white;" type="button" onclick="window.location.href = 'https://kiannelim.github.io/id2116/week4.html';" value="WEEK 6"/>
    </form>
 
    <!-- target="_blank" -->
