--- a/week2.html
+++ b/week2.html
@@ -42,6 +42,7 @@
 
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px; background-color: snow">
     <h2>Microbit Project Progress</h2>
+    <img style="text-align: center;" src="IMAGE/week1_brainstorm.jpeg"; width="40%"; height="70%">
     <img style="text-align: center;" src="IMAGE/dice.JPG"; width="40%"; height="70%">
     <br>
     <br>
