--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
   <head>
    <meta charset="utf-8">
+   <title>Charki-Home</title>
    <link rel="stylesheet" type="text/css" href="style.css">
    <link href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap" rel="stylesheet">
    <style>
