--- a/week2.html
+++ b/week2.html
@@ -28,8 +28,21 @@
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px;">
     <h2>Class Exercise</h2>
     <p>
-      Microbit <br>
-      Introduction to HTML and CSS. Our Website was born today.
+      Today, we were introduced to HTML and CSS. This was the day that this website was born.
+      <br>
+      <br>
+      We also learned tried connecting electrical components to the microbit via a breadboard.
+      We thought we could escape Physics but no! We used components like
+      <ul>
+        <li>LED</li>
+        <li>LED</li>
+        <li>LED</li>
+        <li>LED</li>
+        <li>LED</li>
+      </ul>
+      <br>
+      <br>
+      <img style="text-align: center;" src="IMAGE/dice.JPG"; width="40%"; height="70%">
 
       <br>
 
@@ -43,8 +56,7 @@
 
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px; background-color: snow">
     <h2>Microbit Project Progress</h2>
-    <img style="text-align: center;" src="IMAGE/week1_brainstorm.jpeg"; width="40%"; height="70%">
-    <img style="text-align: center;" src="IMAGE/dice.JPG"; width="40%"; height="70%">
+    <img style="text-align: center;" src="IMAGE/week1_brainstorm.jpeg"; width="40%"; height="70%"> <br>
     <br>
     <br>
     <div class="row2">
