--- a/week2.html
+++ b/week2.html
@@ -26,8 +26,8 @@
 <body>
   <!-- ------------------------------------------ EDIT WEEKLY CONTENT HERE ------------------------------------------------- -->
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px;">
-    <h2>Class Exercise</h2>
-    <p>
+    <h2 style="font-size: 25px; font-weight: 200; text-align: left;">Class Exercise</h2>
+    <p style="text-align: left;">
       Today, we were introduced to HTML and CSS. This was the day that this website was born.
       <br>
       <br>
