--- a/week2.html
+++ b/week2.html
@@ -27,18 +27,17 @@
   <!-- ------------------------------------------ EDIT WEEKLY CONTENT HERE ------------------------------------------------- -->
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px;">
     <h2 style="font-size: 25px; font-weight: 500; text-align: left;">Class Exercise</h2>
-    <p style="text-align: left;">
+    <p class="pcontent">
       Today, we were introduced to HTML and CSS. This was the day that this website was born.
       <br>
       <br>
       We also learned tried connecting electrical components to the microbit via a breadboard.
-      We thought we could escape Physics but no! We used components like
+      We thought we could escape Physics but no! We used components like;
       <ul>
         <li>LED</li>
-        <li>LED</li>
-        <li>LED</li>
-        <li>LED</li>
-        <li>LED</li>
+        <li>Resistors</li>
+        <li>Variable resistors</li>
+        <li>Connecting wires</li>
       </ul>
       <br>
       <br>
