--- a/week2.html
+++ b/week2.html
@@ -32,19 +32,21 @@
       <br>
       <br>
       We also learned tried connecting electrical components to the microbit via a breadboard.
-      We thought we could escape Physics but no! We used components like;
+      We thought we could escape Physics but no!
+    </p>
+
+    <p style="pcontent">
+      <img style="text-align: center;" src="IMAGE/dice.JPG"; width="40%"; height="70%">
+      We used components like;
       <ul>
         <li>LED</li>
         <li>Resistors</li>
         <li>Variable resistors</li>
         <li>Connecting wires</li>
       </ul>
-      <br>
-      <br>
-      <img style="text-align: center;" src="IMAGE/dice.JPG"; width="40%"; height="70%">
+    </p>
 
-      <br>
-
+    <p style="pcontent">
       Problems faced <br>
 
       Lessons learnt <br>
