--- a/week2.html
+++ b/week2.html
@@ -35,8 +35,8 @@
       We thought we could escape Physics but no!
     </p>
 
-    <p style="pcontent">
-      <img style="text-align: center;" src="IMAGE/dice.JPG"; width="40%"; height="70%">
+    <p class="pcontent">
+      <img style="text-align: center;" src="IMAGE/dice.JPG"; width="40%"; height="70%"> <br>
       We used components like;
       <ul>
         <li>LED</li>
@@ -46,7 +46,7 @@
       </ul>
     </p>
 
-    <p style="pcontent">
+    <p class="pcontent">
       Problems faced <br>
 
       Lessons learnt <br>
