--- a/week2.html
+++ b/week2.html
@@ -26,7 +26,7 @@
 <body>
   <!-- ------------------------------------------ EDIT WEEKLY CONTENT HERE ------------------------------------------------- -->
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px;">
-    <h2 style="font-size: 25px; font-weight: 500; text-align: left;">Class Exercise</h2>
+    <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Class Exercise</h2>
     <p class="pcontent">
       Today, we were introduced to HTML and CSS. This was the day that this website was born.
       <br>
@@ -36,7 +36,7 @@
     </p>
 
     <p class="pcontent">
-      <img style="text-align: center;" src="IMAGE/dice.JPG"; width="40%"; height="70%"> <br>
+      <img style="text-align: center;" src="IMAGE/gif_variableresistor.gif"; height="50%"> <br>
       We used components like;
       <ul>
         <li>LED</li>
@@ -56,8 +56,9 @@
   </div>
 
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px; background-color: snow">
-    <h2>Microbit Project Progress</h2>
+    <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Microbit Project Progress</h2>
     <img style="text-align: center;" src="IMAGE/week1_brainstorm.jpeg"; width="40%"; height="70%"> <br>
+    <img style="text-align: center;" src="IMAGE/dice.JPG"; width="40%"; height="70%">
     <br>
     <br>
     <div class="row2">
