--- a/week2.html
+++ b/week2.html
@@ -47,11 +47,30 @@
     </p>
 
     <p class="pcontent">
-      Problems faced <br>
+      <i>Problems faced</i> <br>
+      It was a little tricky trying to make the variable resistor work because the varying resistor in the diagram looked 
+      different from the actual component. But with some technical knowledge and a few attempts, we were able to make it work! 
+      The feeling of accomplishment made the confusion worthwhile. <br>
 
-      Lessons learnt <br>
+      <i>Lessons learnt</i> <br>
+      I think the greatest takeaway from this lesson was the basic knowledge of building a website from scratch. I was suddenly 
+      exposed to a world of possibilties - where (almost) anything can be created with logical thinking. <br>
+      Through this exercise, I went on to further explore various functions within a website. Some include;
+      <ul>
+        <li>Adding hyperlinks (for pages within and outside this webpage);</li>
+        <li>Creating hyperlinks that open in a new tab (instead of redirecting);</li>
+        <li>Creating links that allow readers to scroll straight to a specific line on the page;</li>
+        <li>Creating margins (this improved the look of the webpage significantly);</li>
+        <li>Adding a horizontal line (for segmantation);</li>
+        <li>Breaking a line (like "enter", except that html ignores and "enters" made here and the words just clump up);</li>
+        <li>Adding emojis and gifs. &#128515</li>
+      </ul> <br>
+      Although I still wondered why I would go through all this trouble when I could already build (an even better) and
+      update (an even more convenient) platform using Wix or Weebly.
 
-      Possible applications <br>
+      <i>Possible applications</i> <br>
+      With the ability to connect and control external components to the mircrobit, we could perhaps attach other critical sensors 
+      and perhaps a battery casing to power the microbit remotely. <br>
     </p>
   </div>
 
