--- a/week2.html
+++ b/week2.html
@@ -50,8 +50,10 @@
       <i>Problems faced</i> <br>
       It was a little tricky trying to make the variable resistor work because the varying resistor in the diagram looked 
       different from the actual component. But with some technical knowledge and a few attempts, we were able to make it work! 
-      The feeling of accomplishment made the confusion worthwhile. <br>
+      The feeling of accomplishment made the confusion worthwhile.
+    </p>
 
+    <p class="pcontent">
       <i>Lessons learnt</i> <br>
       I think the greatest takeaway from this lesson was the basic knowledge of building a website from scratch. I was suddenly 
       exposed to a world of possibilties - where (almost) anything can be created with logical thinking. <br>
@@ -64,10 +66,15 @@
         <li>Adding a horizontal line (for segmantation);</li>
         <li>Breaking a line (like "enter", except that html ignores and "enters" made here and the words just clump up);</li>
         <li>Adding emojis and gifs. &#128515</li>
-      </ul> <br>
+      </ul>
+    </p>
+
+    <p class="pcontent">
       Although I still wondered why I would go through all this trouble when I could already build (an even better) and
       update (an even more convenient) platform using Wix or Weebly.
+    </p>
 
+    <p class="pcontent">
       <i>Possible applications</i> <br>
       With the ability to connect and control external components to the mircrobit, we could perhaps attach other critical sensors 
       and perhaps a battery casing to power the microbit remotely. <br>
