--- a/week2.html
+++ b/week2.html
@@ -85,8 +85,8 @@
     <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Microbit Project Progress</h2>
     <img style="text-align: center;" src="IMAGE/week1_brainstorm.jpeg"; width="40%"; height="70%"> <br>
     <img style="text-align: center;" src="IMAGE/dice.JPG"; width="40%"; height="70%">
-    <br>
-    <br>
+    <p class="pcontent">
+    </p>
     <div class="row2">
         <div class="column2" style="text-align: center;">
           <img src="IMAGE/shakecube.png" alt="shakecube" style="width:20%">
