--- a/week2.html
+++ b/week2.html
@@ -83,7 +83,27 @@
 
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px; background-color: snow">
     <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Microbit Project Progress</h2>
-    <img style="text-align: center;" src="IMAGE/week1_brainstorm.jpeg"; width="40%"; height="70%"> <br>
+    <img style="text-align: center;" src="IMAGE/week1_brainstorm.jpeg"; width=100%;> <br>
+    <p class="pcontent">
+      The brainstorming session for the chosen object began. Here were some of the options that we considered. We began by
+      looking at potential movements - those that were gradual and measurable.
+    </p>
+
+    <p class="pcontent">
+      From there, we shortlisted three - Tap, Box and a Swivel Chair.
+    </p>
+
+    <h3>Tap</h3>
+    <!-- INSERT <img> HERE -->
+    <p class="pcontent"> Specifically, the flow of water.</p>
+    <p class="pcontent">
+      We thought it would be interesting to pick an everyday object and measure a fluid element. The intention was to vary sound
+      or visuals with the intensity of the water flow. The strategy was to place impact or pressure sensors on the pivoting
+      point of the tap, or the bottom of the sink bed.
+    </p>
+
+    <h3>Box</h3>
+    <img src="IMAGE/box(1).JPG">
     <img style="text-align: center;" src="IMAGE/dice.JPG"; width="40%"; height="70%">
     <p class="pcontent">
     </p>
