--- a/week2.html
+++ b/week2.html
@@ -90,7 +90,7 @@
     </p>
 
     <p class="pcontent">
-      From there, we shortlisted three - Tap, Box and a Swivel Chair.
+      From there, we shortlisted three - Tap, Swivel Chair and a Box.
     </p>
 
     <h3>Tap</h3>
@@ -99,11 +99,33 @@
     <p class="pcontent">
       We thought it would be interesting to pick an everyday object and measure a fluid element. The intention was to vary sound
       or visuals with the intensity of the water flow. The strategy was to place impact or pressure sensors on the pivoting
-      point of the tap, or the bottom of the sink bed.
+      point of the tap, or the bottom of the sink bed. With the ability to vary sound using the flow of water, perhaps
+      it would then be possible to play a tune with multiple taps? WATER BAND MOMENT.
     </p>
 
+    <h3>Swivel Chair</h3>
+    <img src="IMAGE/swivelchair.jpg" style="width: 50%;">
+    <p class="pcontent"> Specifically, the green studio chair.</p>
+    <p class="pcontent">
+      Likewise, we wanted to use everyday-forgotten items to nudge people to gain a greater appreciation for the things around them.
+      We intended to program the accelerometer to respond to the speed at which its occupant was rolling about.
+      This was to bring an element of fun and play into the everyday object.
+      Unlike the tap however, the chair had a greater potential of serving a purpose. We also intended to program light sensors
+      on the backrest to indicate whether a chair was occupied or not. This could signify the availability of seats in the studio, hence
+      serving a pragmatic function beyond play.
+    </p>
+    <!-- Side by Side images here-->
+    <div class="row2" style="text-align: center;">
+      <div class="column2">
+        <img src="IMAGE/" alt="charlottedp" style="width:40%"> <br> <br>
+      </div>
+      <div class="column2">
+        <img src="IMAGE/kiannedp.png" alt="kiannedp" style="width:40%"> <br> <br>
+      </div>
+    </div>
+
     <h3>Box</h3>
-    <img src="IMAGE/box(1).JPG">
+    <img src="IMAGE/box(1).JPG" style="width: 50%;">
     <img style="text-align: center;" src="IMAGE/dice.JPG"; width="40%"; height="70%">
     <p class="pcontent">
     </p>
