--- a/week2.html
+++ b/week2.html
@@ -93,7 +93,7 @@
       From there, we shortlisted three - Tap, Swivel Chair and a Box.
     </p>
 
-    <h3>Tap</h3>
+    <h2 style="font-size: 25px; text-align: left;">Tap</h2>
     <!-- INSERT <img> HERE -->
     <p class="pcontent"> Specifically, the flow of water.</p>
     <p class="pcontent">
@@ -103,7 +103,7 @@
       it would then be possible to play a tune with multiple taps? WATER BAND MOMENT.
     </p>
 
-    <h3>Swivel Chair</h3>
+    <h2 style="font-size: 25px; text-align: left;">Swivel Chair</h2>
     <img src="IMAGE/swivelchair.jpg" style="width: 50%;">
     <p class="pcontent"> Specifically, the green studio chair.</p>
     <p class="pcontent">
@@ -124,7 +124,7 @@
       </div>
     </div>
 
-    <h3>Box</h3>
+    <h2 style="font-size: 25px; text-align: left;">Box</h2>
     <img src="IMAGE/box(1).JPG" style="width: 50%;">
     <img style="text-align: center;" src="IMAGE/dice.JPG"; width="40%"; height="70%">
     <p class="pcontent">
