--- a/week2.html
+++ b/week2.html
@@ -26,7 +26,7 @@
 <body>
   <!-- ------------------------------------------ EDIT WEEKLY CONTENT HERE ------------------------------------------------- -->
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px;">
-    <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Class Exercise</h2>
+    <h2 style="font-size: 25px; font-weight: bold; text-align: left; background-color: snow">Class Exercise</h2>
     <p class="pcontent">
       Today, we were introduced to HTML and CSS. This was the day that this website was born.
       <br>
@@ -81,7 +81,7 @@
     </p>
   </div>
 
-  <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px; background-color: snow">
+  <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px;">
     <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Microbit Project Progress</h2>
     <img style="text-align: center;" src="IMAGE/week1_brainstorm.jpeg"; width=100%;> <br>
     <p class="pcontent">
@@ -117,7 +117,7 @@
     <!-- Side by Side images here-->
     <div class="row2" style="text-align: center;">
       <div class="column2">
-        <img src="IMAGE/" alt="charlottedp" style="width:40%"> <br> <br>
+        <img src="IMAGE/charlottedp.png" alt="charlottedp" style="width:40%"> <br> <br>
       </div>
       <div class="column2">
         <img src="IMAGE/kiannedp.png" alt="kiannedp" style="width:40%"> <br> <br>
