--- a/week2.html
+++ b/week2.html
@@ -25,8 +25,8 @@
 
 <body>
   <!-- ------------------------------------------ EDIT WEEKLY CONTENT HERE ------------------------------------------------- -->
-  <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px;">
-    <h2 style="font-size: 25px; font-weight: bold; text-align: left; background-color: snow">Class Exercise</h2>
+  <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px; background-color: snow">
+    <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Class Exercise</h2>
     <p class="pcontent">
       Today, we were introduced to HTML and CSS. This was the day that this website was born.
       <br>
