--- a/week2.html
+++ b/week2.html
@@ -107,7 +107,7 @@
     <img src="IMAGE/swivelchair.jpg" style="width: 50%;">
     <p class="pcontent"> Specifically, the green studio chair.</p>
     <p class="pcontent">
-      Likewise, we wanted to use everyday-forgotten items to nudge people to gain a greater appreciation for the things around them.
+      Like the tap, we wanted to use everyday-forgotten items to nudge people to gain a greater appreciation for the things around them.
       We intended to program the accelerometer to respond to the speed at which its occupant was rolling about.
       This was to bring an element of fun and play into the everyday object.
       Unlike the tap however, the chair had a greater potential of serving a purpose. We also intended to program light sensors
@@ -117,10 +117,13 @@
     <!-- Side by Side images here-->
     <div class="row2" style="text-align: center;">
       <div class="column2">
-        <img src="IMAGE/charlottedp.png" alt="charlottedp" style="width:40%"> <br> <br>
+        <img src="IMAGE/Chair_Moving - Copy.PNG" alt="charlottedp" style="width:40%"> <br> <br>
       </div>
       <div class="column2">
-        <img src="IMAGE/kiannedp.png" alt="kiannedp" style="width:40%"> <br> <br>
+        <img src="IMAGE/Chair_Sitting - Copy.PNG" alt="kiannedp" style="width:40%"> <br> <br>
+      </div>
+      <div class="column2">
+        <img src="IMAGE/Chair_Twisting - Copy.PNG" alt="kiannedp" style="width:40%"> <br> <br>
       </div>
     </div>
 
