--- a/index.html
+++ b/index.html
@@ -66,8 +66,32 @@
       <input class="button" style="text-align: center; background-color: white;" type="button" onclick="window.location.href = 'https://kiannelim.github.io/id2116/week4.html';" value="WEEK 5"/>
       <input class="button" style="text-align: center; background-color: white" type="button" onclick="window.location.href = 'https://kiannelim.github.io/id2116/week4.html';" value="WEEK 6"/>
    </form>
+   <!-- TRY TO ADD target="_blank" -->
 
-   <!-- target="_blank" -->
+   <!-- Side by Side images here-->
+   <div class="row2" style="text-align: center;">
+    <div class="column2">
+      <img src="IMAGE/GitHub raw-01.png" alt="WEEK 1" style="width:40%">
+    </div>
+    <div class="column2">
+      <img src="IMAGE/GitHub raw-02.png" alt="WEEK 2" style="width:40%">
+    </div>
+    <div class="column2">
+      <img src="IMAGE/GitHub raw-03.png" alt="WEEK 3" style="width:40%">
+    </div>
+  </div>
+  <br>
+  <div class="row2" style="text-align: center;">
+    <div class="column2">
+      <img src="IMAGE/GitHub raw-04.png" alt="WEEK 4" style="width:40%">
+    </div>
+    <div class="column2">
+      <img src="IMAGE/GitHub raw-05.png" alt="WEEK 5" style="width:40%">
+    </div>
+    <div class="column2">
+      <img src="IMAGE/GitHub raw-06.png" alt="WEEK 6" style="width:40%">
+    </div>
+  </div>
 
   </div>
 
