--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
       <br>
 
       <!-- Side by Side images here-->
-      <div class="row1" style="text-align: center;">
-        <div class="column1">
+      <div class="row_aboutus" style="text-align: center;">
+        <div class="column_aboutus">
           <img src="IMAGE/charlottedp.png" alt="charlottedp" style="width:40%"> <br> <br>
           <a href="https://char-hy.github.io/id2116/" target="_blank">CHARLOTTE HO</a>
           <!-- <a href="https://charlotteho.weebly.com/" target="_blank">CHARLOTTE HO</a> -->
         </div>
-        <div class="column1">
+        <div class="column_aboutus">
           <img src="IMAGE/kiannedp.png" alt="kiannedp" style="width:40%"> <br> <br>
           <a href="https://kiannelim.github.io/id2116/kianne.html" target="_blank">KIANNE LIM</a>
         </div>
@@ -93,6 +93,10 @@
       <img src="IMAGE/GitHub raw-06.png" alt="WEEK 6" style="width:60%">
     </div>
   </div>
+
+  <br>
+  <br>
+  <br>
 
 <footer style="margin-left: -10px; margin-right: -10px;">
   <br>
