--- a/week2.html
+++ b/week2.html
@@ -115,14 +115,14 @@
       serving a pragmatic function beyond play.
     </p>
     <!-- Side by Side images here-->
-    <div class="row2" style="text-align: center;">
-      <div class="column2">
+    <div class="row_w2" style="text-align: center;">
+      <div class="column_w2">
         <img src="IMAGE/Chair_Moving - Copy.PNG" alt="charlottedp" style="width:40%"> <br> <br>
       </div>
-      <div class="column2">
+      <div class="column_w2">
         <img src="IMAGE/Chair_Sitting - Copy.PNG" alt="kiannedp" style="width:40%"> <br> <br>
       </div>
-      <div class="column2">
+      <div class="column_w2">
         <img src="IMAGE/Chair_Twisting - Copy.PNG" alt="kiannedp" style="width:40%"> <br> <br>
       </div>
     </div>
@@ -132,14 +132,14 @@
     <img style="text-align: center;" src="IMAGE/dice.JPG"; width="40%"; height="70%">
     <p class="pcontent">
     </p>
-    <div class="row2">
-        <div class="column2" style="text-align: center;">
+    <div class="row_w2">
+        <div class="column_w2" style="text-align: center;">
           <img src="IMAGE/shakecube.png" alt="shakecube" style="width:20%">
         </div>
-        <div class="column2">
+        <div class="column_w2">
           <img src="IMAGE/spincube.png" alt="spincube" style="width:20%">
         </div>
-        <div class="column2">
+        <div class="column_w2">
           <img src="IMAGE/tiltcubemusic.png" alt="tiltcubemusic" style="width:20%">
         </div>
     </div>
