--- a/week2.html
+++ b/week2.html
@@ -128,8 +128,8 @@
     </div>
 
     <h2 style="font-weight: normal; font-size: 25px; text-align: left;">Box</h2>
-    <img src="IMAGE/box(1).JPG" style="width: 50%;">
-    <img style="text-align: center;" src="IMAGE/dice.JPG"; width="40%"; height="70%">
+    <img src="IMAGE/box(1).JPG" style="height: 80px;">
+    <img style="text-align: center;" src="IMAGE/dice.JPG"; height="80px">
     <p class="pcontent">
     </p>
     <div class="row_w2">
