--- a/week2.html
+++ b/week2.html
@@ -115,7 +115,7 @@
       serving a pragmatic function beyond play.
     </p>
     <!-- Side by Side images here-->
-    <!-- <div class="row_w2" style="text-align: center;">
+    <div class="row_w2" style="text-align: center;">
       <div class="column_w2">
         <img src="IMAGE/Chair_Moving - Copy.PNG" alt="charlottedp" style="width:40%"> <br> <br>
       </div>
@@ -143,7 +143,7 @@
           <img src="IMAGE/tiltcubemusic.png" alt="tiltcubemusic" style="width:20%">
         </div>
     </div>
-  </div> -->
+  </div>
 <!-- ------------------------------------------ END OF WEEKLY CONTENT HERE ------------------------------------------------- -->
 
   <footer style="margin-left: -10px; margin-right: -10px;">
