trying to create a fixed sticky footer

--- a/week4.html
+++ b/week4.html
@@ -47,8 +47,21 @@
     </p>
   </div>
 <!-- ------------------------------------------ END OF WEEKLY CONTENT HERE ------------------------------------------------- -->
-
-  <footer style="margin-left: -10px; margin-right: -10px;">
+  <style>
+    .footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: red;
+  color: white;
+  text-align: center;
+}
+</style>
+  <div class="footer">
+   
+  
+   <!-- <footer style="margin-left: -10px; margin-right: -10px;">-->
     <br>
     <br>
     <br>
@@ -66,7 +79,10 @@
     <br>
     <br>
     <br>
-  </footer>
+  </div>
+  <!--  </footer> -->
+  
+  
 
   </body>
 
