--- a/week4.html
+++ b/week4.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap" rel="stylesheet">
 
-  <div class="hero-image">
+  <div class="hero-image" "header">
    <div class="hero-text">
      <font size="+4"><h1> <b>Weekly Documentation</b> </h1></font>
      <h3>Week 4   |   07.02.2020</h3>
@@ -48,14 +48,19 @@
   </div>
 <!-- ------------------------------------------ END OF WEEKLY CONTENT HERE ------------------------------------------------- -->
   <style>
-    .footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: red;
-  color: white;
-  text-align: center;
+    div.header {
+    display: block; text-align: center; 
+    position: running(header);
+}
+   div.footer {
+    display: block; text-align: center;
+    position: running(footer);
+}
+@page {
+    @top-center { content: element(header) }
+}
+@page { 
+    @bottom-center { content: element(footer) }
 }
 </style>
   <div class="footer">
