--- a/week4.html
+++ b/week4.html
@@ -63,7 +63,7 @@
     @bottom-center { content: element(footer) }
 }
 </style>
-  <div class="footer">
+  <footer>
    
   
    <!-- <footer style="margin-left: -10px; margin-right: -10px;">-->
@@ -85,7 +85,7 @@
     <br>
     <br>
   </div>
-  <!--  </footer> -->
+  </footer>
   
   
 
