--- a/week3.html
+++ b/week3.html
@@ -26,22 +26,31 @@
 <body>
   <!-- ------------------------------------------ EDIT WEEKLY CONTENT HERE ------------------------------------------------- -->
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px; background-color: snow">
-    <h2>Class Exercises</h2>
-    <p>
-        Today we were introduced to p5.js - we learned how to create interactive images and a sideway-scroll photo album.
+    <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Class Exercises</h2>
+    <p class="pcontent">
+        Today we were introduced to p5.js. We learned how to create interactive images and a sideway-scroll photo album.
         Here is what we did in class:
 
-        Problems faced
+        <p class="pcontent">
+          <i>Problems faced</i> <br>
+          ...
+        </p>
 
-        Lessons learnt
+        <p class="pcontent">
+          <i>Lessons Learnt</i> <br>
+          ...
+        </p>
 
-        Possible applications
+        <p class="pcontent">
+          <i>Possible Applications</i> <br>
+          ...
+        </p>
     </p>
   </div>
 
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px;">
-    <h2>Microbit Project Progress</h2>
-    <p>
+    <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Microbit Project Progress</h2>
+    <p class="pcontent">
       “Mapping” [Audio, Visual, Physical] feedback with Object interaction. 
     </br>
     <ul>
