--- a/week4.html
+++ b/week4.html
@@ -63,9 +63,7 @@
     @bottom-center { content: element(footer) }
 }
 </style>
-  <footer>
-   
-  
+  <div class="footer">
    <!-- <footer style="margin-left: -10px; margin-right: -10px;">-->
     <br>
     <br>
@@ -85,7 +83,7 @@
     <br>
     <br>
   </div>
-  </footer>
+  <!--  </footer> -->
   
   
 
