--- a/week3.html
+++ b/week3.html
@@ -33,17 +33,19 @@
 
         <p class="pcontent">
           <i>Problems faced</i> <br>
-          ...
+          Using p5.js posed problems when it came to saving the file and reopening them.
+          For some reason, even though the bulb was completed, it didn't show up. Hence, after retrying the exercise two times, I learned
+          my lesson and started copying-and-pasting the entire code into Notepad.
         </p>
 
         <p class="pcontent">
           <i>Lessons Learnt</i> <br>
-          ...
+          I wondered what the difference was between function(setup) and function(draw) was.
         </p>
 
         <p class="pcontent">
           <i>Possible Applications</i> <br>
-          ...
+          I think the clicking lightbulb alone is 
         </p>
     </p>
   </div>
@@ -51,8 +53,7 @@
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px;">
     <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Microbit Project Progress</h2>
     <p class="pcontent">
-      “Mapping” [Audio, Visual, Physical] feedback with Object interaction. 
-    </br>
+      “Mapping” [Audio, Visual, Physical] feedback with Object interaction.
     <ul>
     <li>Closed Box (with mewing sounds): [action] Open lid > [audio feedback] Mewing sounds stop</li>
     <li>Closed Box (static colours): [action] Topple box > [visual feedback] video plays moving colours</li>
