--- a/week3.html
+++ b/week3.html
@@ -11,7 +11,7 @@
    <div class="hero-text">
      <font size="+4"><h1> <b>Weekly Documentation</b> </h1></font>
      <h3>Week 3   |   31.01.2020</h3>
-     <p><i>Written and edited by Charlotte Ho and Kianne Lim.</i></p>
+     <p><i>Written and edited by Charlotte Ho.</i></p>
      <style>
       div{
       margin-top: -10px;
@@ -54,13 +54,7 @@
     <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Microbit Project Progress</h2>
     <p class="pcontent">
       “Mapping” [Audio, Visual, Physical] feedback with Object interaction.
-    <ul>
-    <li>Closed Box (with mewing sounds): [action] Open lid > [audio feedback] Mewing sounds stop</li>
-    <li>Closed Box (static colours): [action] Topple box > [visual feedback] video plays moving colours</li>
-    <li>Closed Box: [action] Open lid > [audio feedback] Orchestra sounds (maybe different actions will have different sounds)</li>
-    <li>Empty Box (with something in it): [action] takes out object (inside box) > [audio feedback] plays MC Hammer - You Can't Touch This.</li>
     </p>
-  </ul>
   </div>
 <!-- ------------------------------------------ END OF WEEKLY CONTENT HERE ------------------------------------------------- -->
 
