--- a/week2.html
+++ b/week2.html
@@ -90,7 +90,8 @@
     </p>
 
     <p class="pcontent">
-      From there, we shortlisted three - Tap, Swivel Chair and a Box.
+      From there, we shortlisted three - Tap, Swivel Chair and a Box. We then proceeded to analyse each of their form and function,
+      and assess their potential for this project.
     </p>
 
     <h2 style="font-weight: normal; font-size: 25px; text-align: left;">Tap</h2>
