--- a/week4.html
+++ b/week4.html
@@ -11,7 +11,7 @@
    <div class="hero-text">
      <font size="+4"><h1> <b>Weekly Documentation</b> </h1></font>
      <h3>Week 4   |   07.02.2020</h3>
-     <p><i>Written and edited by Charlotte Ho.</i></p>
+     <p><i>Written and edited by Charlotte Ho and Kianne Lim.</i></p>
      <style>
       div{
       margin-top: -10px;
@@ -42,8 +42,14 @@
 
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px;">
     <h2>Microbit Project Progress</h2>
-    <p>
-      Lorem ipsum dolor sit amet.
+    <p class="pcontent">
+      “Mapping” [Audio, Visual, Physical] feedback with Object interaction.
+    <ul>
+      <li>Closed Box (with mewing sounds): [action] Open lid > [audio feedback] Mewing sounds stop</li>
+      <li>Closed Box (static colours): [action] Topple box > [visual feedback] video plays moving colours</li>
+      <li>Closed Box: [action] Open lid > [audio feedback] Orchestra sounds (maybe different actions will have different sounds)</li>
+      <li>Empty Box (with something in it): [action] takes out object (inside box) > [audio feedback] plays MC Hammer - You Can't Touch This.</li>
+    </ul>
     </p>
   </div>
 <!-- ------------------------------------------ END OF WEEKLY CONTENT HERE ------------------------------------------------- -->
